# job-automation-prototype

./: .gitignore  CNAME  Dockerfile  README.md  agent_runner.py  main.py  pyproject.toml
.github/workflows/: backend.yaml
app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py
data/: sample_jobs.json
services/: __init__.py  application.py  evaluation.py  ingestion.py
workers/: __init__.py
