[project]
name = "autogpt"
version = "0.1.0"
description = "Automated job evaluation and application platform prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.36",
    "pydantic>=2.8.2",
    "pydantic-settings>=2.3.2",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "aiofiles>=23.2.1",
    "aiosqlite>=0.20.0",
    "playwright>=1.47.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.9"
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
